Fix wordToGuess align

--- a/src/styles/appStyle.css
+++ b/src/styles/appStyle.css
@@ -57,7 +57,7 @@ button:active {
 /* === Keyboard === */
 .keyboard {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 50px);
+  grid-template-columns: repeat(auto-fit, 50px);
   grid-auto-rows: 50px;
   justify-content: center;
   gap: 10px;
@@ -111,7 +111,7 @@ button:active {
 /* === GuessWord === */
 .wordToGuess {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(50px, auto));
+  grid-template-columns: repeat(auto-fit, minmax(50px, auto));
   grid-auto-rows: 50px;
   gap: 10px;
   width: 100%;
@@ -181,7 +181,7 @@ button:active {
 
   /* === Keyboard === */
   .keyboard {
-    grid-template-columns: repeat(auto-fill, 30px);
+    grid-template-columns: repeat(auto-fit, 30px);
     grid-auto-rows: 30px;
     gap: 10px;
     width: 90%;
@@ -194,7 +194,7 @@ button:active {
 
   /* === GuessWord === */
   .wordToGuess {
-    grid-template-columns: repeat(auto-fill, minmax(30px, auto));
+    grid-template-columns: repeat(auto-fit, minmax(30px, auto));
     grid-auto-rows: 30px;
     width: 95%;
     margin: 0.5em 0;
